--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -15,28 +15,36 @@
         <li><a href="travel">travel</a></li>
     </ul>
     <div>
-        <img src="images/image-1.jpg" alt="dancing girl">
-        <p><span>Lifestile</span></p>
+        <figure>
+            <img src="images/image-1.jpg" alt="dancing girl">
+            <figcaption>Lifestile</figcaption>
+        </figure>
         <h2>More then just a music festival</h2>
-        <p><span>Amenra is a Belgian band from Kortrijk. It was formed in 1999 by vocalist Colin H. van Eeckhout and guitarist Mathieu Vandekerckhove, who now perform alongside drummer Bjorn Lebon, guitarist Lennart Bossu and bassist Levy Seynaeve. Among a number of other works, they have released six studio albums in the Mass series, the latest of them through Neurot Recordings. The band's unique musical style, characterised by brooding atmospheres and spiritual intensity, is rooted in doom metal, hardcore punk and post-rock. Their live performances, accompanied by visual art, have been described as "entrancing communions".</span></p>
+        <p>Amenra is a Belgian band from Kortrijk. It was formed in 1999 by vocalist Colin H. van Eeckhout and guitarist Mathieu Vandekerckhove, who now perform alongside drummer Bjorn Lebon, guitarist Lennart Bossu and bassist Levy Seynaeve. Among a number of other works, they have released six studio albums in the Mass series, the latest of them through Neurot Recordings. The band's unique musical style, characterised by brooding atmospheres and spiritual intensity, is rooted in doom metal, hardcore punk and post-rock. Their live performances, accompanied by visual art, have been described as "entrancing communions".</p>
     </div>
     <div>
-        <img src="images/image-2.jpg" alt="a cup of coffee">
-        <p><span>lifestile</span></p>
+        <figure>
+            <img src="images/image-2.jpg" alt="a cup of coffee">
+            <figcaption>lifestile</figcaption>
+        </figure>
         <h2>Life tases better with coffee</h2>
         <p>Amenra was formed in 1999 in the West Flanders city of Kortrijk. The band was founded by vocalist Colin H. van Eeckhout and lead guitarist Mathieu Vandekerckhove. The two had been in the hardcore punk band Spineless and wanted to create music with more "heart and soul".</p>
     </div>
     <div>
-        <img src="images/image-3.jpg" alt="two happy girls">
-        <p><span>photodiary</span></p>
+        <figure>
+            <img src="images/image-3.jpg" alt="two happy girls">
+            <figcaption>photodiary</figcaption>
+        </figure>
         <h2>American dream</h2>
-        <p><span>Nirvana was an American rock band formed by singer and guitarist Kurt Cobain and bassist Krist Novoselic in Aberdeen, Washington, in 1987. Nirvana went through a succession of drummers, the longest-lasting being Dave Grohl, who joined in 1990. Despite releasing only three full-length studio albums in their seven-year career, Nirvana has come to be regarded as one of the most influential and important alternative bands in history. Though the band dissolved in 1994 after the death of Cobain, their music maintains a popular following and continues to influence modern rock and roll culture.</span></p>
+        <p>Nirvana was an American rock band formed by singer and guitarist Kurt Cobain and bassist Krist Novoselic in Aberdeen, Washington, in 1987. Nirvana went through a succession of drummers, the longest-lasting being Dave Grohl, who joined in 1990. Despite releasing only three full-length studio albums in their seven-year career, Nirvana has come to be regarded as one of the most influential and important alternative bands in history. Though the band dissolved in 1994 after the death of Cobain, their music maintains a popular following and continues to influence modern rock and roll culture.</p>
     </div>
     <div>
-        <img src="images/image-4.jpg" alt="hipster">
-        <p><span>photodiary</span></p>
+        <figure>
+            <img src="images/image-4.jpg" alt="hipster">
+            <figcaption>photodiary</figcaption>
+        </figure>
         <h2>A day exploring the Alps</h2>
-        <p><span> The late 1980s, Nirvana established itself as part of the Seattle grunge scene, releasing its first album, Bleach, for the independent record label Sub Pop in 1989. They developed a sound that relied on dynamic contrasts, often between quiet verses and loud, heavy choruses. After signing to major label DGC Records, Nirvana found unexpected success with "Smells Like Teen Spirit", the first single from the band's second album Nevermind (1991). Nirvana's sudden success widely popularized alternative rock, and Cobain found himself referred to in the media as the "spokesman of a generation", with Nirvana considered the "flagship band" of Generation X.</span></p>
+        <p>The late 1980s, Nirvana established itself as part of the Seattle grunge scene, releasing its first album, Bleach, for the independent record label Sub Pop in 1989. They developed a sound that relied on dynamic contrasts, often between quiet verses and loud, heavy choruses. After signing to major label DGC Records, Nirvana found unexpected success with "Smells Like Teen Spirit", the first single from the band's second album Nevermind (1991). Nirvana's sudden success widely popularized alternative rock, and Cobain found himself referred to in the media as the "spokesman of a generation", with Nirvana considered the "flagship band" of Generation X.</p>
     </div>
     <button>load more</button>
 </body>
