added folders and files

--- a/draft/index.html
+++ b/draft/index.html
@@ -2,64 +2,91 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Module_3</title>
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <title>module-4</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
+  
 </head>
 <body>
   <div class="wrapper">
-    <ul class="nav">
-      <li>
-        <a href="#">lifestyle</a>
-      </li>
-      <li>
-        <a href="#">photodiary</a>
-      </li>
-      <li>
-        <a href="#">music</a>
-      </li>
-      <li>
-        <a href="#">travel</a>
-      </li>
-    </ul>
-    <div class="box">
-      <div class="article">
-        <img src="./images/image-1.jpg" alt="festival">
-        <span>lifestyle</span>
-        <h2>More than just a music festival</h2>
-        <p>Our moon makes Earth a more livable planet by moderating our home planet's wobble on its axis, leading to a relatively stable climate, and creating a tidal rhythm that has guided humans for thousands of years.</p>
+    <div class="header clearfix">
+      <div class="logo">
+        <a href="#">mart</a>
       </div>
-      <div class="article">
-        <img src="./images/image-2.jpg" alt="a cup of coffee">
-        <span>lifestyle</span>
-        <h2>Life tastes better with coffee</h2>
-        <p>Our moon makes Earth a more livable planet by moderating our home planet's wobble on its axis, leading to a relatively stable climate, and creating a tidal rhythm that has guided humans for thousands of years.</p>
+      <ul class="nav">
+      <li class="home"><a href="#">home</a></li>
+      <li class="about"><a href="#">about us</a></li>
+      <li class="page"><a href="#">page</a></li>
+      <li class="shop"><a href="#">shop</a></li>
+      <li class="blog"><a href="#">blog</a></li>
+      <li class="contact"><a href="#">contact us</a></li>
+      </ul>
+    </div>
+    <div class="section1 clearfix">
+      <h2>featured products</h2>
+      <div class="product1">
+        <img src="./images/product1.png" alt="a women's shoes">
+        <span class="name">blue tshirt</span>
+        <span class="price">&#x24;26</span>
       </div>
-      <div class="article">
-        <img src="./images/image-3.jpg" alt="Girls on the bridge">
-        <span>photodiary</span>
-        <h2>American dream</h2>
-        <p>Our moon makes Earth a more livable planet by moderating our home planet's wobble on its axis, leading to a relatively stable climate, and creating a tidal rhythm that has guided humans for thousands of years.</p>
+      <div class="product2">
+        <img src="./images/product2.png" alt="a woman belt">
+        <span class="name">woman shirt</span>
+        <span class="price">&#x24;31</span>
       </div>
-      <div class="article">
-        <img src="./images/image-4.jpg" alt="a boy on montain">
-        <span>photodiary</span>
-        <h2>A day exploring the Alps</h2>
-        <p>Our moon makes Earth a more livable planet by moderating our home planet's wobble on its axis, leading to a relatively stable climate, and creating a tidal rhythm that has guided humans for thousands of years.</p>
+      <div class="product3">
+        <img src="./images/product3.png" alt="a hat">
+        <span class="name">yellow tshirt</span>
+        <span class="price">&#x24;21</span>
       </div>
-      <div class="article">
-        <img src="./images/image-5.jpg" alt="a woman with hat">
-        <span>lifestyle</span>
-        <h2>Top 10 song for running</h2>
-        <p class="bottom_p">Our moon makes Earth a more livable planet by moderating our home planet's wobble on its axis, leading to a relatively stable climate, and creating a tidal rhythm that has guided humans for thousands of years.</p>
+      <div class="product4">
+        <img src="./images/product4.png" alt="a woman bag">
+        <span class="name">cool lingerie</span>
+        <span class="price">&#x24;56</span>
       </div>
-      <div class="article">
-        <img src="./images/image-6.jpg" alt="a winter road">
-        <span>lifestyle</span>
-        <h2>Cold winter days</h2>
-        <p class="bottom_p">Our moon makes Earth a more livable planet by moderating our home planet's wobble on its axis, leading to a relatively stable climate, and creating a tidal rhythm that has guided humans for thousands of years.</p>
+      <div class="product5">
+        <img src="./images/product5.png" alt="a woman bag">
+        <span class="name">blue tshirt</span>
+        <span class="price">&#x24;26</span>
       </div>
-     <input type="button" value="Load more">
+      <div class="product6">
+        <img src="./images/product6.png" alt="a woman belt">
+        <span class="name">woman tshirt</span>
+        <span class="price">&#x24;31</span>
+      </div>
+      <div class="product7">
+        <img src="./images/product7.png" alt="a man shoes">
+        <span class="name">yellow tshirt</span>
+        <span class="price">&#x24;21</span>
+      </div>
+      <div class="product8">
+        <img src="./images/product8.png" alt="glasses">
+        <span class="name">cool lingerie</span>
+        <span class="price">&#x24;56</span>
+      </div>
+    </div>
+    <div class="section2 clearfix">
+      <h2>latest news</h2>
+      <div class="article1">
+        <img src="./images/ipad.jpg" alt="ipad">
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, numquam.</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore accusamus sequi id, distinctio reiciendis exercitationem neque deleniti inventore cupiditate minus.</p>
+        <button>Read More</button>
+      </div>
+      <div class="article2">
+        <img src="./images/slide1.jpg" alt="gils">
+        <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, soluta?</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus ipsam blanditiis a architecto, accusantium voluptatum voluptates illo ab assumenda non?</p>
+        <button>Read More</button>
+      </div>
+      <div class="article3">
+        <img src="./images/bus.jpg" alt="a bus">
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, rerum.</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio nihil velit sunt repellendus eaque officiis, tempora deleniti ullam magnam numquam.</p>
+        <button>Read More</button>
+      </div>
     </div>
   </div>
 </body>
